syntax = "proto3";

option java_package = "via.sep3.grpc.book";

message BookMessage{
  string isbn = 1;
  string title = 2;
  string author = 3;
  string edition = 4;
  string description = 5;
  double price = 6;
  string url = 7;

}
message GenreBookMessage{
  string type = 1;
}
message BookGenreMessage{
  BookMessage book = 1;
  repeated GenreBookMessage genres = 2;
}

message EmptyBookMessage{

}

message ListOfBooks{
  repeated BookMessage books = 1;
}

message BookIsbnMessage{
  string isbn = 1 ;
}

service BookService {
  rpc getAllBooks( EmptyBookMessage) returns ( ListOfBooks);
  rpc createBook(BookMessage) returns (EmptyBookMessage);
  rpc getBookByIsbn(BookIsbnMessage) returns (BookMessage);
  rpc createBookWithGenres(BookGenreMessage) returns (EmptyBookMessage);
}